dead code removed from layouts

--- a/AndroidStudioProjects/AthleticApp/app/src/main/res/layout/fragment_hamaikako.xml
+++ b/AndroidStudioProjects/AthleticApp/app/src/main/res/layout/fragment_hamaikako.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.hamaikako.HamaikakoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hAMAIKAKO FRAGMENT" />
+        android:text="HAMAIKAKO FRAGMENT" />
 
 </FrameLayout>
